src/uri.c

#line 1 "src/uri.rl"
/*
 * Copyright 2010-2016, Tarantool AUTHORS, please see AUTHORS file.
 *
 * Redistribution and use in source and binary forms, with or
 * without modification, are permitted provided that the following
 * conditions are met:
 *
 * 1. Redistributions of source code must retain the above
 *    copyright notice, this list of conditions and the
 *    following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above
 *    copyright notice, this list of conditions and the following
 *    disclaimer in the documentation and/or other materials
 *    provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY <COPYRIGHT HOLDER> ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
 * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
 * <COPYRIGHT HOLDER> OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 * THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
#include "uri.h"
#include <string.h>
#include <stdio.h> /* snprintf */
int
uri_parse(struct uri *uri, const char *p)
{
	const char *pe = p + strlen(p);
	const char *eof = pe;
	int cs;
	memset(uri, 0, sizeof(*uri));

	if (p == pe)
		return -1;

	const char *s = NULL, *login = NULL, *scheme = NULL;
	size_t login_len = 0, scheme_len = 0;

	
#line 52 "src/uri.c"
static const int uri_start = 144;
static const int uri_first_final = 144;
static const int uri_error = 0;

static const int uri_en_main = 144;


#line 60 "src/uri.c"
	{
	cs = uri_start;
	}

#line 65 "src/uri.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 144:
	switch( (*p) ) {
		case 33: goto tr150;
		case 35: goto tr151;
		case 37: goto tr152;
		case 47: goto tr153;
		case 59: goto tr150;
		case 61: goto tr150;
		case 63: goto tr155;
		case 64: goto st204;
		case 91: goto st38;
		case 95: goto tr150;
		case 117: goto tr158;
		case 126: goto tr150;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr150;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr157;
		} else if ( (*p) >= 65 )
			goto tr157;
	} else
		goto tr154;
	goto st0;
st0:
cs = 0;
	goto _out;
tr150:
#line 138 "src/uri.rl"
	{ s = p; }
#line 94 "src/uri.rl"
	{ s = p; }
	goto st145;
st145:
	if ( ++p == pe )
		goto _test_eof145;
case 145:
#line 111 "src/uri.c"
	switch( (*p) ) {
		case 33: goto st145;
		case 35: goto tr159;
		case 37: goto st6;
		case 47: goto tr161;
		case 58: goto tr162;
		case 61: goto st145;
		case 63: goto tr163;
		case 64: goto tr164;
		case 95: goto st145;
		case 126: goto st145;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st145;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st145;
	} else
		goto st145;
	goto st0;
tr151:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr159:
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr170:
#line 70 "src/uri.rl"
	{ s = p; }
#line 71 "src/uri.rl"
	{ uri->query = s; uri->query_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr172:
#line 71 "src/uri.rl"
	{ uri->query = s; uri->query_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr175:
#line 132 "src/uri.rl"
	{ s = p; }
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr186:
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr201:
#line 102 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr210:
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr316:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 129 "src/uri.rl"
	{ s = p;}
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr320:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
tr325:
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st146;
st146:
	if ( ++p == pe )
		goto _test_eof146;
case 146:
#line 280 "src/uri.c"
	switch( (*p) ) {
		case 33: goto tr165;
		case 37: goto tr166;
		case 61: goto tr165;
		case 95: goto tr165;
		case 124: goto tr165;
		case 126: goto tr165;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr165;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr165;
	} else
		goto tr165;
	goto st0;
tr165:
#line 74 "src/uri.rl"
	{ s = p; }
	goto st147;
st147:
	if ( ++p == pe )
		goto _test_eof147;
case 147:
#line 306 "src/uri.c"
	switch( (*p) ) {
		case 33: goto st147;
		case 37: goto st1;
		case 61: goto st147;
		case 95: goto st147;
		case 124: goto st147;
		case 126: goto st147;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st147;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st147;
	} else
		goto st147;
	goto st0;
tr166:
#line 74 "src/uri.rl"
	{ s = p; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 332 "src/uri.c"
	switch( (*p) ) {
		case 37: goto st147;
		case 117: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st147;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st147;
	} else
		goto st147;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st3;
	} else
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st5;
	} else
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st147;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st147;
	} else
		goto st147;
	goto st0;
tr152:
#line 138 "src/uri.rl"
	{ s = p; }
#line 94 "src/uri.rl"
	{ s = p; }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 408 "src/uri.c"
	switch( (*p) ) {
		case 37: goto st145;
		case 117: goto st7;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st145;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st145;
	} else
		goto st145;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st9;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st9;
	} else
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st10;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st10;
	} else
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st145;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st145;
	} else
		goto st145;
	goto st0;
tr161:
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
	goto st148;
tr177:
#line 132 "src/uri.rl"
	{ s = p; }
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
	goto st148;
tr187:
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
	goto st148;
tr202:
#line 102 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
	goto st148;
tr211:
#line 162 "src/uri.rl"
	{ s = p; }
	goto st148;
st148:
	if ( ++p == pe )
		goto _test_eof148;
case 148:
#line 511 "src/uri.c"
	switch( (*p) ) {
		case 33: goto st148;
		case 35: goto tr151;
		case 37: goto st11;
		case 61: goto st148;
		case 63: goto tr155;
		case 95: goto st148;
		case 124: goto st148;
		case 126: goto st148;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st148;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st148;
	} else
		goto st148;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 37: goto st148;
		case 117: goto st12;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st148;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st148;
	} else
		goto st148;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st13;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st13;
	} else
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st14;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st14;
	} else
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st15;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st15;
	} else
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st148;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st148;
	} else
		goto st148;
	goto st0;
tr155:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr163:
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr179:
#line 132 "src/uri.rl"
	{ s = p; }
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr189:
#line 133 "src/uri.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr205:
#line 102 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr213:
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr319:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 129 "src/uri.rl"
	{ s = p;}
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr322:
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
tr327:
#line 162 "src/uri.rl"
	{ s = p; }
#line 166 "src/uri.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 113 "src/uri.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 186 "src/uri.rl"
	{ s = p; }
	goto st149;
st149:
	if ( ++p == pe )
		goto _test_eof149;
case 149:
#line 733 "src/uri.c"
	switch( (*p) ) {
		case 33: goto tr169;
		case 35: goto tr170;
		case 37: goto tr171;
		case 61: goto tr169;
		case 95: goto tr169;
		case 124: goto tr169;
		case 126: goto tr169;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr169;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr169;
	} else
		goto tr169;
	goto st0;
tr169:
#line 70 "src/uri.rl"
	{ s = p; }
	goto st150;
st150:
	if ( ++p == pe )
		goto _test_eof150;
case 150:
#line 760 "src/uri.c"
	switch( (*p) ) {
		case 33: goto st150;
		case 35: goto tr172;
		case 37: goto st16;
		case 61: goto st150;
		case 95: goto st150;
		case 124: goto st150;
		case 126: goto st150;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st150;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st150;
	} else
		goto st150;
	goto st0;
tr171:
#line 70 "src/uri.rl"
	{ s = p; }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 787 "src/uri.c"
	switch( (*p) ) {
		case 37: goto st150;
		case 117: goto st17;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st150;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st150;
	} else
		goto st150;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st18;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st18;
	} else
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st20;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st20;
	} else
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st150;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st150;
	} else
		goto st150;
	goto st0;
tr162:
#line 139 "src/uri.rl"
	{ login = s; login_len = p - s; }
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
	goto st151;
tr241:
#line 139 "src/uri.rl"
	{ login = s; login_len = p - s; }
#line 102 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 95 "src/uri.rl"
	{ uri->host = s; uri->host_len = p - s;}
	goto st151;
st151:
	if ( ++p == pe )
		goto _test_eof151;
case 151:
#line 872 "src/uri.c"
	switch( (*p) ) {
		case 33: goto tr174;
		case 35: goto tr175;
		case 37: goto tr176;
		case 47: goto tr177;
		case 59: goto tr174;
		case 61: goto tr174;
